# fast-json-pointer

./: .gitignore  .readthedocs.yaml  README.md  README.rst  badges.rst  pyproject.toml
.github/workflows/: build-n-publish.yaml  ci.yaml  pypi.yaml  test.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt
src/fast_json_pointer/: __init__.py  cli.py  draft_parser.py  exceptions.py  pointer.py  rel_parser.py  resolver.py  rfc6901_parser.py
tests/: rel_parser_test.py  rfc6901_parser_test.py  spec_test.py
