[tool.poetry]
name = "fast-json-pointer"
version = "0.0.0" # See github workflow, version tags pulled automatically from git 
description = "Implements RFC 6901 JSON pointers, and json-schema draft relative pointer resolution."
authors = ["Tristan Sweeney <sweeneytri@gmail.com>"]
repository = "https://github.com/SlowAPI/py-json-pointer"
documentation = "https://py-json-pointer.readthedocs.io/en/latest/"
readme = "README.rst"
keywords = ["json", "json-pointer", "rfc", "rfc 6901"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "fast_json_pointer", from="src" },
]

[tool.poetry.scripts]
fjp = {callable = "fast_json_pointer.cli:app", extras = ["cli"] }

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.7.0", optional = true, extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
Sphinx = "^5.3.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
cli = ["typer"]

[tool.poetry.group.dev.dependencies]
sphinx-toolbox = "^3.2.0"

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
